# twitch-youtube-sync

./: .gitignore  Cargo.toml  LICENSE-MIT
src/: download.rs  lib.rs  main.rs  upload.rs  video.rs
src/download/: mod.rs
src/upload/: auth.rs  mod.rs
