[package]
name = "twitch-youtube-sync"
version = "0.1.0"
authors = ["Anh Tuan Tran <nhanhnhanh17399@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = "0.10.4"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true