[package]
name = "twitch-youtube-sync"
version = "0.1.0"
authors = ["Anh Tuan Tran <nhanhnhanh17399@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
regex = "1"
serde_urlencoded = "0.6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
